src/compiler/phase/synan/Prev25Parser.java
// Generated from Prev25Parser.g4 by ANTLR 4.13.2

    package compiler.phase.synan;
    import java.util.*;
    import compiler.common.report.*;
    import compiler.phase.lexan.*;
    import compiler.phase.abstr.AST;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"doclint:missing", "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class Prev25Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, INTEGER_CONSTANT=2, CHAR_CONSTANT=3, STRING_CONSTANT=4, 
		AMPERSAND=5, PIPE=6, EQUAL=7, NOT_EQUAL=8, LESS=9, GREATER=10, LESS_EQUAL=11, 
		GREATER_EQUAL=12, MULTIPLY=13, DIVIDE=14, MODULO=15, PLUS=16, MINUS=17, 
		EXCLAMATION=18, DOT=19, CARET=20, ASSIGN=21, COLON=22, COMMA=23, LBRACE=24, 
		RBRACE=25, LPAREN=26, RPAREN=27, LBRACKET=28, RBRACKET=29, BOOL=30, CHAR=31, 
		DO=32, ELSE=33, END=34, FALSE=35, FUN=36, IF=37, INT=38, IN=39, LET=40, 
		NULL=41, RETURN=42, SIZEOF=43, THEN=44, TRUE=45, TYP=46, VAR=47, VOID=48, 
		WHILE=49, ID=50, COMMENT=51;
	public static final int
		RULE_source = 0, RULE_defs = 1, RULE_def = 2, RULE_typealias = 3, RULE_vardeclaration = 4, 
		RULE_fundeclaration = 5, RULE_fundefinition = 6, RULE_funParams = 7, RULE_paramList = 8, 
		RULE_param = 9, RULE_paramList_CD = 10, RULE_param_CD = 11, RULE_statements = 12, 
		RULE_statements_more = 13, RULE_statement = 14, RULE_whileStatement = 15, 
		RULE_ifThenStatement = 16, RULE_ifThenElseStatement = 17, RULE_letInStatement = 18, 
		RULE_typeExpr = 19, RULE_typeList = 20, RULE_expression = 21, RULE_expr = 22, 
		RULE_logic_or = 23, RULE_logic_and = 24, RULE_comparison = 25, RULE_additive = 26, 
		RULE_multiplicative = 27, RULE_unary = 28, RULE_postfix = 29, RULE_primary = 30, 
		RULE_exprList = 31, RULE_expr_more = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "defs", "def", "typealias", "vardeclaration", "fundeclaration", 
			"fundefinition", "funParams", "paramList", "param", "paramList_CD", "param_CD", 
			"statements", "statements_more", "statement", "whileStatement", "ifThenStatement", 
			"ifThenElseStatement", "letInStatement", "typeExpr", "typeList", "expression", 
			"expr", "logic_or", "logic_and", "comparison", "additive", "multiplicative", 
			"unary", "postfix", "primary", "exprList", "expr_more"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'&'", "'|'", "'=='", "'!='", "'<'", "'>'", 
			"'<='", "'>='", "'*'", "'/'", "'%'", "'+'", "'-'", "'!'", "'.'", "'^'", 
			"'='", "':'", "','", "'{'", "'}'", "'('", "')'", "'['", "']'", "'bool'", 
			"'char'", "'do'", "'else'", "'end'", "'false'", "'fun'", "'if'", "'int'", 
			"'in'", "'let'", "'null'", "'return'", "'sizeof'", "'then'", "'true'", 
			"'typ'", "'var'", "'void'", "'while'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WHITESPACE", "INTEGER_CONSTANT", "CHAR_CONSTANT", "STRING_CONSTANT", 
			"AMPERSAND", "PIPE", "EQUAL", "NOT_EQUAL", "LESS", "GREATER", "LESS_EQUAL", 
			"GREATER_EQUAL", "MULTIPLY", "DIVIDE", "MODULO", "PLUS", "MINUS", "EXCLAMATION", 
			"DOT", "CARET", "ASSIGN", "COLON", "COMMA", "LBRACE", "RBRACE", "LPAREN", 
			"RPAREN", "LBRACKET", "RBRACKET", "BOOL", "CHAR", "DO", "ELSE", "END", 
			"FALSE", "FUN", "IF", "INT", "IN", "LET", "NULL", "RETURN", "SIZEOF", 
			"THEN", "TRUE", "TYP", "VAR", "VOID", "WHILE", "ID", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Prev25Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private Location loc(Token tok) { return new Location((LexAn.LocLogToken)tok); }
	    private Location loc(Token tok1, Token tok2) { return new Location((LexAn.LocLogToken)tok1, (LexAn.LocLogToken)tok2); }
	    private Location loc(Token tok1, Locatable loc2) { return new Location((LexAn.LocLogToken)tok1, loc2); }
	    private Location loc(Locatable loc1, Token tok2) { return new Location(loc1, (LexAn.LocLogToken)tok2); }
	    private Location loc(Locatable loc1, Locatable loc2) { return new Location(loc1, loc2); }

	public Prev25Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceContext extends ParserRuleContext {
		public AST.Nodes<AST.FullDefn> ast;
		public DefsContext defs;
		public DefsContext defs() {
			return getRuleContext(DefsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Prev25Parser.EOF, 0); }
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			((SourceContext)_localctx).defs = defs(0);
			setState(67);
			match(EOF);
			 ((SourceContext)_localctx).ast =  new AST.Nodes<AST.FullDefn>(((SourceContext)_localctx).defs.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefsContext extends ParserRuleContext {
		public ArrayList<AST.FullDefn> ast;
		public DefsContext d;
		public DefContext def;
		public DefContext def() {
			return getRuleContext(DefContext.class,0);
		}
		public DefsContext defs() {
			return getRuleContext(DefsContext.class,0);
		}
		public DefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defs; }
	}

	public final DefsContext defs() throws RecognitionException {
		return defs(0);
	}

	private DefsContext defs(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		DefsContext _localctx = new DefsContext(_ctx, _parentState);
		DefsContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_defs, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(71);
			((DefsContext)_localctx).def = def();
			 ((DefsContext)_localctx).ast =  new ArrayList<AST.FullDefn>(); _localctx.ast.add(((DefsContext)_localctx).def.ast); 
			}
			_ctx.stop = _input.LT(-1);
			setState(80);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new DefsContext(_parentctx, _parentState);
					_localctx.d = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_defs);
					setState(74);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(75);
					((DefsContext)_localctx).def = def();
					 ((DefsContext)_localctx).ast =  ((DefsContext)_localctx).d.ast; _localctx.ast.add(((DefsContext)_localctx).def.ast); 
					}
					} 
				}
				setState(82);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefContext extends ParserRuleContext {
		public AST.FullDefn ast;
		public TypealiasContext typealias;
		public VardeclarationContext vardeclaration;
		public FundeclarationContext fundeclaration;
		public FundefinitionContext fundefinition;
		public TypealiasContext typealias() {
			return getRuleContext(TypealiasContext.class,0);
		}
		public VardeclarationContext vardeclaration() {
			return getRuleContext(VardeclarationContext.class,0);
		}
		public FundeclarationContext fundeclaration() {
			return getRuleContext(FundeclarationContext.class,0);
		}
		public FundefinitionContext fundefinition() {
			return getRuleContext(FundefinitionContext.class,0);
		}
		public DefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def; }
	}

	public final DefContext def() throws RecognitionException {
		DefContext _localctx = new DefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_def);
		try {
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				((DefContext)_localctx).typealias = typealias();
				 ((DefContext)_localctx).ast =  ((DefContext)_localctx).typealias.ast; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				((DefContext)_localctx).vardeclaration = vardeclaration();
				 ((DefContext)_localctx).ast =  ((DefContext)_localctx).vardeclaration.ast; 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				((DefContext)_localctx).fundeclaration = fundeclaration();
				 ((DefContext)_localctx).ast =  ((DefContext)_localctx).fundeclaration.ast; 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(92);
				((DefContext)_localctx).fundefinition = fundefinition();
				 ((DefContext)_localctx).ast =  ((DefContext)_localctx).fundefinition.ast;  
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypealiasContext extends ParserRuleContext {
		public AST.TypDefn ast;
		public Token TYP;
		public Token ID;
		public TypeExprContext typeExpr;
		public TerminalNode TYP() { return getToken(Prev25Parser.TYP, 0); }
		public TerminalNode ID() { return getToken(Prev25Parser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(Prev25Parser.ASSIGN, 0); }
		public TypeExprContext typeExpr() {
			return getRuleContext(TypeExprContext.class,0);
		}
		public TypealiasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typealias; }
	}

	public final TypealiasContext typealias() throws RecognitionException {
		TypealiasContext _localctx = new TypealiasContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typealias);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			((TypealiasContext)_localctx).TYP = match(TYP);
			setState(98);
			((TypealiasContext)_localctx).ID = match(ID);
			setState(99);
			match(ASSIGN);
			setState(100);
			((TypealiasContext)_localctx).typeExpr = typeExpr();
			 ((TypealiasContext)_localctx).ast =  new AST.TypDefn(loc(((TypealiasContext)_localctx).TYP, ((TypealiasContext)_localctx).typeExpr.ast), ((TypealiasContext)_localctx).ID.getText(), ((TypealiasContext)_localctx).typeExpr.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VardeclarationContext extends ParserRuleContext {
		public AST.VarDefn ast;
		public Token VAR;
		public Token ID;
		public TypeExprContext typeExpr;
		public TerminalNode VAR() { return getToken(Prev25Parser.VAR, 0); }
		public TerminalNode ID() { return getToken(Prev25Parser.ID, 0); }
		public TerminalNode COLON() { return getToken(Prev25Parser.COLON, 0); }
		public TypeExprContext typeExpr() {
			return getRuleContext(TypeExprContext.class,0);
		}
		public VardeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardeclaration; }
	}

	public final VardeclarationContext vardeclaration() throws RecognitionException {
		VardeclarationContext _localctx = new VardeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_vardeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			((VardeclarationContext)_localctx).VAR = match(VAR);
			setState(104);
			((VardeclarationContext)_localctx).ID = match(ID);
			setState(105);
			match(COLON);
			setState(106);
			((VardeclarationContext)_localctx).typeExpr = typeExpr();
			 ((VardeclarationContext)_localctx).ast =  new AST.VarDefn(loc(((VardeclarationContext)_localctx).VAR, ((VardeclarationContext)_localctx).typeExpr.ast), ((VardeclarationContext)_localctx).ID.getText(), ((VardeclarationContext)_localctx).typeExpr.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FundeclarationContext extends ParserRuleContext {
		public AST.ExtFunDefn ast;
		public Token FUN;
		public Token ID;
		public FunParamsContext funParams;
		public TypeExprContext typeExpr;
		public TerminalNode FUN() { return getToken(Prev25Parser.FUN, 0); }
		public TerminalNode ID() { return getToken(Prev25Parser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(Prev25Parser.LPAREN, 0); }
		public FunParamsContext funParams() {
			return getRuleContext(FunParamsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(Prev25Parser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(Prev25Parser.COLON, 0); }
		public TypeExprContext typeExpr() {
			return getRuleContext(TypeExprContext.class,0);
		}
		public FundeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fundeclaration; }
	}

	public final FundeclarationContext fundeclaration() throws RecognitionException {
		FundeclarationContext _localctx = new FundeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fundeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			((FundeclarationContext)_localctx).FUN = match(FUN);
			setState(110);
			((FundeclarationContext)_localctx).ID = match(ID);
			setState(111);
			match(LPAREN);
			setState(112);
			((FundeclarationContext)_localctx).funParams = funParams();
			setState(113);
			match(RPAREN);
			setState(114);
			match(COLON);
			setState(115);
			((FundeclarationContext)_localctx).typeExpr = typeExpr();
			 ((FundeclarationContext)_localctx).ast =  new AST.ExtFunDefn(loc(((FundeclarationContext)_localctx).FUN, ((FundeclarationContext)_localctx).typeExpr.ast), ((FundeclarationContext)_localctx).ID.getText(), ((FundeclarationContext)_localctx).funParams.ast, ((FundeclarationContext)_localctx).typeExpr.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FundefinitionContext extends ParserRuleContext {
		public AST.DefFunDefn ast;
		public Token FUN;
		public Token ID;
		public FunParamsContext funParams;
		public TypeExprContext typeExpr;
		public StatementsContext statements;
		public TerminalNode FUN() { return getToken(Prev25Parser.FUN, 0); }
		public TerminalNode ID() { return getToken(Prev25Parser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(Prev25Parser.LPAREN, 0); }
		public FunParamsContext funParams() {
			return getRuleContext(FunParamsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(Prev25Parser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(Prev25Parser.COLON, 0); }
		public TypeExprContext typeExpr() {
			return getRuleContext(TypeExprContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(Prev25Parser.ASSIGN, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public FundefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fundefinition; }
	}
